# ancor-program-traits

./: .gitignore  CMakeLists.txt  README.md  library.c  library.h  markers.h  markers.h.in  mpi.h.patch  program_traits.c  program_traits.h  program_traits.h.in
performance-evaluation/: CMakeLists.txt  evaluation_driver.c  evaluation_runner.py  evaluation_testcode.c  generate_test_code.py  generate_test_code.py.in  visualize_results.py
sample/: CMakeLists.txt  configure_and_build_mpich.sh  example.c  example_app.c  example_app_2.c  example_app_3.c  example_app_4.c  example_mpi_lib.c  example_mpi_lib.h  mpi.h.in.patch  mpi_hello_world.c  mpi_wrapper.c  mpi_wrapper.h.in  normal_mpi_lib.c  normal_mpi_lib.h  patch_mpi_header.sh
sample/example_mpi_lib/: mpi_lib.c  mpi_lib.h
sample/modified_mpi/: mpi_lib.c  mpi_lib.h
sample/normal_mpi/: mpi_lib.c  mpi_lib.h
sample/pmpi_wrapper_test/: CMakeLists.txt  mpi_hello_world.c  mpi_wrapper_lib.c
tests/: CMakeLists.txt  example_app_1.c  example_app_3.c  example_app_4.c
tests/modified_mpi/: mpi_lib.c  mpi_lib.h
tests/wrapper_lib/: wrapper_lib.c  wrapper_lib.h
